updates to index.html and added script phaser.min.js
updates to index.html and added script phaser.min.js

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <title>Phaser3 + Parceljs Template</title>
   </head>
   <body>
+    <script type="module" src="phaser.min.js"></script>
     <script type="module" src="main.js"></script>
   </body>
 </html>
